# payload-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: citests.yml  publish.yml
payload/: __init__.py  exceptions.py  objects.py  utils.py  version.py
payload/arm/: __init__.py  attr.py  object.py  request.py  session.py
tests/: fixtures.py  test_access_token.py  test_account.py  test_billing.py  test_invoice.py  test_payment_link.py  test_payment_method.py  test_request.py  test_sdk.py  test_session.py  test_transaction.py  thingo.py  ttt.py
tests/int/: fixtures.py  test_billing.py  test_invoice.py  test_payment_link.py  test_payment_method.py  test_session.py  test_transaction.py
tests/unit/arm/: test_attr.py  test_object.py  test_request.py
